[gd_scene load_steps=6 format=3 uid="uid://cadg5ju3m7by8"]

[ext_resource type="PackedScene" uid="uid://dcf67nr7bp2we" path="res://GodotASCIIToolKit/Controls/TextBoxes/ascii_custom_text_box.tscn" id="1_ly0ms"]
[ext_resource type="Script" uid="uid://kbytrrxghsr4" path="res://GodotASCIIToolKit/Controls/Buttons/ascii_boxed_text_button.gd" id="2_qo6c4"]
[ext_resource type="FontFile" uid="uid://jhdjv388k8ag" path="res://GodotASCIIToolKit/Resources/Font/Mx437_IBM_VGA_8x16.ttf" id="3_luebu"]

[sub_resource type="Theme" id="Theme_sw350"]
resource_local_to_scene = true
default_font = ExtResource("3_luebu")
default_font_size = 16

[sub_resource type="Theme" id="Theme_o7da4"]
resource_local_to_scene = true
default_font = ExtResource("3_luebu")
default_font_size = 16

[node name="ASCIIBoxedTextButton" instance=ExtResource("1_ly0ms")]
offset_right = 152.0
mouse_default_cursor_shape = 2
script = ExtResource("2_qo6c4")
hoover = true
hoover_behavior = 0
text = "Grève Générale!"

[node name="BackgroundRect" parent="." index="0"]
mouse_filter = 1

[node name="BoxLabel" parent="." index="1"]
mouse_filter = 1
theme = SubResource("Theme_sw350")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "┌─────────────────┐
│                 │
└─────────────────┘
"

[node name="TextLabel" parent="." index="2"]
mouse_filter = 1
theme = SubResource("Theme_o7da4")
text = "Grève Générale!"
